# haskell-sudoku

./: .env  .gitignore  .travis.yml  Dockerfile  README.md  do  haskell-sudoku.cabal  stack.yaml
src/: BusinessLogic.hs  Interfaces.hs  Main.hs  Validation.hs
src/Ext/Data/: Either.hs
src/Sudoku/: BusinessLogic.hs  Cli.hs  Interfaces.hs  Validation.hs
src/Sudoku/SimpleCli/: Cli.hs  ResultFormatting.hs  Validation.hs
test/: Spec.hs
test/Ext/Data/: EitherSpec.hs
test/Sudoku/: BusinessLogicSpec.hs  CliSpec.hs  InterfacesSpec.hs
test/Sudoku/SimpleCli/: CliSpec.hs  ValidationSpec.hs
