name:              haskell-sudoku
version:           1.0
build-type:        Simple
cabal-version:     >= 1.10

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base == 4.9.1.0
  exposed-modules:
      Main
  default-language: Haskell2010

executable haskell-sudoku
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base
  default-language: Haskell2010

test-suite test-haskell-sudoku
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    test
  ghc-options: -Wall
  build-depends:
      base == 4.9.1.0
    , haskell-sudoku == 1.0
    , hspec == 2.4.3
    , QuickCheck == 2.9.2
  default-language: Haskell2010
